--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
+        "@heroicons/react": "^2.2.0",
         "@tinymce/tinymce-react": "^6.3.0",
         "tinymce": "^8.3.1"
     }
