feat: Infrastructure fixes and production deployment preparation
- Fixed 'usePublicPath' error by moving config to bootstrap/app.php
- Resolved asset 404 errors with proper storage symlink and URL helpers
- Fixed Ziggy route error by resolving universities route conflict
- Added CORS headers to .htaccess for cross-origin asset loading
- Optimized Vite build with vendor chunk splitting
- Updated all frontend links to use route() helpers instead of hardcoded paths
- Added universities index route and controller method
- Configured environment for production deployment (educationforliberty.com)

Documentation:
- Added ARCHITECTURE.md - System architecture overview
- Added DEVELOPMENT_LOG.md - Session development history
- Added FEATURE_STATUS.md - Feature implementation tracking
- Added PRODUCTION_DEPLOYMENT.md - Production deployment guide
- Added DEPLOYMENT_REFERENCE.md - Quick reference for deployment
- Added configure_production.php - Automated production config script

Technical improvements:
- Route caching optimization
- Build performance improvements (20-26s build time)
- Case-sensitive URL handling
- Split architecture support for cPanel deployment

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Environment files
 .env
 .env.backup
+.env.backup.*
 .env.production
 
 # System files
@@ -25,6 +26,13 @@ efl_core/phpunit.result.cache
 efl_core/auth.json
 efl_core/storage/*.key
 efl_core/storage/pail
+
+# Temporary files
+efl_core/check_route.txt
+efl_core/routes.txt
+efl_core/update_env.php
+efl_core/fix_env.php
+/package-lock.json
 
 # Public (Frontend) Ignored Files
 public_html/build
